log
Thu 25 Apr 2024 10:51:40 PM UTC: 
 tests:  0|6
total_score: 0/70
71db5ab
Thu 25 Apr 2024 11:08:09 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|5
total_score: 20/70
e84059e
Thu 25 Apr 2024 11:20:47 PM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  5|4
total_score: 30/70
c5ed58b
Thu 25 Apr 2024 11:21:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:81:20: error: expected ‘;’ before ‘}’ token
   81 |   free(buckets_old)
      |                    ^
      |                    ;
   82 | }
      | ~                   
Compilation failed
a527ab5
Thu 25 Apr 2024 11:21:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
a4fcc8e
Thu 25 Apr 2024 11:34:52 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:87:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   87 |   map->buckets = (Pair *)calloc(capacity,sizeof(Pair));
      |                ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d92752e
Thu 25 Apr 2024 11:35:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:82:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |   map->buckets = (Pair *)calloc(capacity,sizeof(Pair));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
e601778
Thu 25 Apr 2024 11:36:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0012c4e
Thu 25 Apr 2024 11:37:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:82:18: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   82 |     map->buckets = (Pair *)calloc(capacity,sizeof(Pair));
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
b0b62c1
Thu 25 Apr 2024 11:38:03 PM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d091b65
Thu 25 Apr 2024 11:38:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 30/70
e887a7f
Thu 25 Apr 2024 11:39:17 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  10|3
total_score: 40/70
906ff8f
Thu 25 Apr 2024 11:40:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6de2f45
Thu 25 Apr 2024 11:40:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
26e31cf
Thu 25 Apr 2024 11:42:06 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:95:18: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   95 |     map->buckets = (Pair *)calloc(capacity, sizeof(Pair));
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
113ac46
Thu 25 Apr 2024 11:43:39 PM UTC: 
 hashmap.c | 27 ++++-----------------------
 1 file changed, 4 insertions(+), 23 deletions(-)
 tests:  11|2
total_score: 50/70
cff75d6
Thu 25 Apr 2024 11:45:37 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|2
total_score: 50/70
5637b5a
Fri 26 Apr 2024 01:30:35 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  14|1
total_score: 60/70
1651942
Fri 26 Apr 2024 01:31:03 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:105:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  105 |     return NULL;
      |            ^~~~
hashmap.c:91:6: note: declared here
   91 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
52728f2
Fri 26 Apr 2024 01:31:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
83e6566
Fri 26 Apr 2024 01:33:42 AM UTC: 
 hashmap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
 tests:  14|1
total_score: 60/70
c9df57c
Fri 26 Apr 2024 01:34:18 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  14|1
total_score: 60/70
786c54d
